Fix unable to type spaces for lines containing text in the article editor on Firefox

--- a/src/common/styles/utils/content.article.css
+++ b/src/common/styles/utils/content.article.css
@@ -21,6 +21,7 @@
 
 .u-content,
 #editor-article-container .ql-editor {
+  white-space: pre-wrap;
   line-height: var(--line-height-article-base);
   outline: none;
 
